--- a/front/pagsexercicios/bracos.html
+++ b/front/pagsexercicios/bracos.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="exercicios.css">
 </head>
 <body>
-    <h1>Braços</h1>
+
+    <header>
+        <h1>Braços</h1>
+    </header>
+    
+
+    <h1>.</h1>
+    <script src="../treinos.js"></script>
+
+    <div id="posts"></div>
 </body>
 </html>
