--- a/front/pagsexercicios/bracos.html
+++ b/front/pagsexercicios/bracos.html
@@ -8,14 +8,18 @@
 </head>
 <body>
 
-    <header>
-        <h1>Braços</h1>
-    </header>
-    
+    <div id="button-container">
+        <button onclick="redirecionar()"id="buttonsair">Terminar Treino</button>
+    </div>
 
-    <h1>.</h1>
-    <script src="../treinos.js"></script>
 
+
+
+
+
+
+
+    <script src="exercicios.js"></script>
     <div id="posts"></div>
 </body>
 </html>
