--- a/front/cadastro/Cadastro.html
+++ b/front/cadastro/Cadastro.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <title>Fitpay Cadastro</title>
     <link rel="stylesheet" href="style_cadastro.css">
 </head>
@@ -22,6 +23,14 @@
         <input type="text" id="email">
         <label for="password">Senha:</label>
         <input type="password" id="password">
+
+        <select name="funcao" id="funcao" required>
+            <option value="" disabled selected>Selecione sus função</option>
+            <option value="1">Usuário</option>
+            <option value="2">Treinador</option>
+            <option value="3">Loja</option>     
+        </select>
+
     </form>
 
     </main>
