--- a/front/pag1/pag1.html
+++ b/front/pag1/pag1.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="pag1.css">
 </head>
 <body>
+
+  <div id="mensagem"></div>
+  
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">FITPAY</a>
@@ -21,7 +24,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Loja</a>
+                  <a class="nav-link active" id="Loja" aria-current="page" href="#">Loja</a>
                 </li>
                 <li class="nav-item">
                 </li>
@@ -40,15 +43,15 @@
           </div>
         </div>
       </nav>
-    <img src="./img/FP.png" alt="logo" id="logo">
+    <img src="../img/FP.png" alt="logo" id="logo">
 
     <select name="exercicios" id="exercicios" required>
         <option value="" disabled selected>Selecione seu Treino</option>
-        <option value="1">Braços</option>
-        <option value="2">Costas</option>
-        <option value="3">Peito / Abdômen </option>
-        <option value="4">Pernas</option>
-        <option value="5">Cardio</option>       
+        <option value="1">velocidade</option>
+        <option value="2">resistencia</option>
+        <option value="3">impulso</option>
+        <option value="4">força</option>
+        <option value="5">perda de gordura</option>       
     </select>
 
     <button onclick="confirmarEnvio(event)">Confirmar</button>
