--- a/front/login/index_login.html
+++ b/front/login/index_login.html
@@ -6,12 +6,12 @@
     <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Fitpay</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../gradiente/gradientestyle.css">
 </head>
 <body>
 
-        <h1 id="title1">Seja bem vindo ao:</h1>
+        <h1 id="title1">Seja bem vindo!</h1>
         <img src="/front/img/FP.png" alt="logo" id="logo">
-        <h1 id="title2">Fitpay</h1>
 
 
     
