--- a/front/pag1/pag1.html
+++ b/front/pag1/pag1.html
@@ -6,12 +6,13 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="pag1.css">
+     <link rel="stylesheet" href="../gradiente/gradientestyle.css">
 </head>
 <body>
 
   <div id="mensagem"></div>
   
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">FITPAY</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
