--- a/front/pagsexercicios/Velocidade.html
+++ b/front/pagsexercicios/Velocidade.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Braços</title>
     <link rel="stylesheet" href="exercicios.css">
+    <link rel="stylesheet" href="../gradiente/gradientestyle.css">
 </head>
 <body>
 
