--- a/front/cadastro_treinos/treinos.html
+++ b/front/cadastro_treinos/treinos.html
@@ -5,12 +5,14 @@
     <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Document</title>
     <link rel="stylesheet" href="../login/style.css">
+    <link rel="stylesheet" href="cadastrot.css">
+    <link rel="icon" href="../img/FP.png" type="image/x-icon">
 </head>
 <body>
-    <h2>Cadastre a Atividade</h2>
+    <h2 id="cda">Cadastre a Atividade</h2>
 
     <form action="#" enctype="multipart/form-data">
-        <label for="fname">Titulo:</label><br>
+        <label for="fname" id="tt">Titulo:</label><br>
         <input type="text" id="title" name="title"><br>
         
         <label for="lname">Descrição:</label><br>
