--- a/front/pagsexercicios/forca.html
+++ b/front/pagsexercicios/forca.html
@@ -9,6 +9,11 @@
 </head>
 <body>
      <h1>Peito/Abdomen</h1>
-    
+
+
+
+     
+     <script src="exercicios.js"></script>
+     <div id="posts"></div>
 </body>
 </html>
