--- a/front/comeco/comeco.html
+++ b/front/comeco/comeco.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Document</title>
+    <title>FITPAY</title>
     <link rel="stylesheet" href="comeco.css">
+    <link rel="stylesheet" href="../gradiente/gradientestyle.css">
+    <link rel="icon" href="../img/FP.png" type="image/x-icon">
 </head>
 <body>
 
