--- a/front/login/index_login.html
+++ b/front/login/index_login.html
@@ -7,6 +7,7 @@
     <title>Fitpay</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../gradiente/gradientestyle.css">
+    <link rel="icon" href="../img/FP.png" type="image/x-icon">
 </head>
 <body>
 
