--- a/front/pagsexercicios/impulso.html
+++ b/front/pagsexercicios/impulso.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Costas</title>
+    <link rel="stylesheet" href="exercicios.css">
+    <link rel="stylesheet" href="../gradiente/gradientestyle.css">
 </head>
 <body>
     <h1>Costas</h1>
     
+
+    <script src="exercicios.js"></script>
+    <div id="posts"></div>
 </body>
 </html>
