--- a/front/pagsexercicios/perda.html
+++ b/front/pagsexercicios/perda.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pernas</title>
+    <link rel="stylesheet" href="exercicios.css">
+    <link rel="stylesheet" href="../gradiente/gradientestyle.css">
 </head>
 <body>
     <h1>Pernas</h1>
+
+    <script src="exercicios.js"></script>
+    <div id="posts"></div>
 </body>
 </html>
