--- a/front/cadastro_treinos/treinos.html
+++ b/front/cadastro_treinos/treinos.html
@@ -12,10 +12,10 @@
     <h2 id="cda">Cadastre a Atividade</h2>
 
     <form action="#" enctype="multipart/form-data">
-        <label for="fname" id="tt">Titulo:</label><br>
+        <label for="fname" id="tt">Titulo</label><br>
         <input type="text" id="title" name="title"><br>
         
-        <label for="lname">Descrição:</label><br>
+        <label for="lname" id="dc">Descrição:</label><br>
         <input type="text" id="description" name="description"><br><br>
 
         <div>
@@ -23,7 +23,7 @@
         </div>
 
         <select name="musculo" id="musculo" required>
-            <option value="" disabled selected>Selecione seu Treino</option>
+            <option value="" disabled selected>Categoria</option>
             <option value="1">velocidade</option>
             <option value="2">resistencia</option>
             <option value="3">impulso</option>
