--- a/front/cadastro/Cadastro.html
+++ b/front/cadastro/Cadastro.html
@@ -6,6 +6,7 @@
 
     <title>Fitpay Cadastro</title>
     <link rel="stylesheet" href="style_cadastro.css">
+    <link rel="stylesheet" href="../gradiente/gradientestyle.css">
     <link rel="icon" href="../img/FP.png" type="image/x-icon">
 </head>
 <body>
