--- a/front/loja/loja.html
+++ b/front/loja/loja.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja</title>
     <link rel="stylesheet" href="../gradiente/gradientestyle.css">
+    <link rel="stylesheet" href="loja.css">
+    <script src="loja.js"></script>
 </head>
 <body>
 
+    <div id= "P">Preço:</div>
+
+
+    <div id="lojas"></div>
+
+    <div class="background-box">
+      </div>
+    
+      <button type="button" id="Adquirir">Adquirir!</button>
 </body>
 </html>
