--- a/front/pag1/pag1.html
+++ b/front/pag1/pag1.html
@@ -26,7 +26,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" id="Loja" aria-current="page" href="#">Loja</a>
+                  <a class="nav-link active" id="Loja" aria-current="page" href="../loja/loja.html">Loja</a>
                 </li>
                 <li class="nav-item">
                 </li>
